# truck-allocation-problem

./: .gitignore  app.py  app_notebook.ipynb  pyproject.toml  readme.md  requirements.txt  trucks_invalid_size.csv
.github/workflows/: python-app.yml
exceptions/: __init__.py  data_not_loaded_error.py  invalid_data_size_error.py
geospatial/: __init__.py  geospatial_utils.py
optimizer/: __init__.py  smart_optimizer.py
test/: test_app.py  test_geospatial.py  test_optimizer.py
