[tool.poetry]
name = "truck-allocation-problem"
version = "0.1.0"
description = "Truck allocation Problem"
authors = ["Paulo Rodrigues <paulorodriguesxv@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.3.5"
numpy = "^1.21.4"
tabulate = "^0.8.9"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-sugar = "^0.9.4"
pylint = "^2.12.2"
pytest-filter-subpackage = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
